sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:15: error: reassignment to val
        echange=true
               ^